[project]
name = "hands-on-monte-carlo-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "keanutoofa", email = "keanu.toofa@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hands-on-monte-carlo-simulation = "hands_on_monte_carlo_simulation.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
